# embedded-rust-hardware-init

./: Cargo.toml
notes/: yamlLayouts.yaml
programs/: Cargo.toml
programs/src/: main.rs  main_expanded.rs
src/: generation.rs  lib.rs
src/deprecated/: config.rs  generation.rs  lib.rs  types.rs
src/device/: mod.rs  stm32f1xx.rs
src/device/stm32f1xx/: generation.rs  mod.rs
src/devices/stm32f1xx/: gpio.rs  mod.rs
