[package]
authors = ["\"tom\" <\"tom.meyer89@gmail.com\">"]
edition = "2018"
name = "embedded_rust_hardware_init"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
project-root = "0.2.2"
quote = "1.0.7"
serde = "1.0.114"
serde-aux = "2.3.0"
serde_derive = "1.0.114"
serde_yaml = "0.8.20"
syn = {version = "1.0.38", features = ["full"]}
yaml-rust = "0.4"
